Fixed spacing and menu cut offs

--- a/stylesheets/sass/main.scss
+++ b/stylesheets/sass/main.scss
@@ -44,10 +44,7 @@ nav {
 ////////////////// Primary-content
 .primary-content {
   width: 65%;
-  padding-left: 50px;
-  padding-right: 50px;
-  padding-top: 5em;
-  padding-bottom: 5em;
+  padding: 5em 50px 5em 50px;
   margin: auto;
   max-width: 960px;
 
@@ -63,7 +60,8 @@ nav {
   line-height: 1.5;
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
-  padding-bottom: 2em;
+  padding-bottom: 1em;
+  padding-top: 1em;
   a {
     text-decoration: none;
     color: #000;
@@ -89,6 +87,16 @@ h5 {
     border-bottom: 1px solid #ccc;
     padding-top: 20px;
     padding-bottom: 20px;
+}
+
+#shades, #posts {
+  padding-bottom: 3em;
+  padding-top: 3em;
+}
+
+#about {
+  padding-top: 5em;
+  padding-bottom: 5em;
 }
 
 ////////////////// Footer - Social Media
